tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Home - ID 89/Clear Home Info - ID 234.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="234" name="Clear Home Info"></ScriptReference>
	<ObjectList membercount="2">
		<Step id="76" name="Feldwert setzen" enable="True">
			<Options>16385</Options>
			<ParameterValues membercount="2">
				<Parameter type="FieldReference">
					<FieldReference id="2" name="_gHomeScreenInfo">
						<repetition value="1"></repetition>
						<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
					</FieldReference>
				</Parameter>
				<Parameter type="Calculation">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[""]]></Text>
							<ChunkList hash="26631CDF3EEB0CE74C7FC665903CAC32">
								<Chunk type="NoRef">&quot;&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
