tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Home - ID 89/Set Home Screen Info to content of ( Object ) - ID 189.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="189" name="Set Home Screen Info to content of ( Object )"></ScriptReference>
	<ObjectList membercount="5">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[_SP(1)]]></Text>
								<ChunkList hash="E80C756E03E3FE774270E581B01590AE">
									<Chunk type="CustomFunctionRef">_SP</Chunk>
									<Chunk type="NoRef">(1)</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$Object"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="76" name="Feldwert setzen" enable="True">
			<Options>16385</Options>
			<ParameterValues membercount="2">
				<Parameter type="FieldReference">
					<FieldReference id="2" name="_gHomeScreenInfo">
						<repetition value="1"></repetition>
						<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
					</FieldReference>
				</Parameter>
				<Parameter type="Calculation">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[LiesLayoutobjektAttribut ( $Object ; "content" )]]></Text>
							<ChunkList hash="E3CA1817A129734D47B0F787F67BB381">
								<Chunk type="FunctionRef">LiesLayoutobjektAttribut</Chunk>
								<Chunk type="NoRef"> ( </Chunk>
								<Chunk type="VariableReference">$Object</Chunk>
								<Chunk type="NoRef"> ; &quot;content&quot; )</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
