tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Home - ID 89/Set LineNumber Color - ID 153.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="153" name="Set LineNumber Color"></ScriptReference>
	<ObjectList membercount="14">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20131216 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="85" name="AnwenderAbbruchZulassen setzen" enable="True">
			<Options>65536</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="86" name="Fehleraufzeichnung setzen" enable="True">
			<Options>196608</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="True"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="75" name="Schreibe Änderung Datens./Abfrage" enable="True">
			<Options>128</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Dateneingabeüberprüfung unterdrücken" id="256" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Schreiben erzwingen" id="512" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Set LineNumbers color"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[_Home::_gSyntaxColoringEnabled = 1]]></Text>
							<ChunkList hash="5D7E3FE2CC5D31FD36D0AFAD9D4EC3C8">
								<Chunk type="FieldRef">
									<FieldReference id="20" name="_gSyntaxColoringEnabled" repetition="1">
										<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> = 1</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[ _ExtractColorAsJavascriptRGB ( _Home::_gLineNumberColor )]]></Text>
								<ChunkList hash="7F837844B72377358EF8D66321C33697">
									<Chunk type="NoRef"> </Chunk>
									<Chunk type="CustomFunctionRef">_ExtractColorAsJavascriptRGB</Chunk>
									<Chunk type="NoRef"> ( </Chunk>
									<Chunk type="FieldRef">
										<FieldReference id="32" name="_gLineNumberColor" repetition="1">
											<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
										</FieldReference>
									</Chunk>
									<Chunk type="NoRef"> )</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$LineNumberColor"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[MBS( "SyntaxColoring.LineNumbers.SetColor"; $LineNumberColor )]]></Text>
								<ChunkList hash="B75E57E74EE9EF1C05A13C05F8E899B4">
									<Chunk type="FunctionRef">MBS</Chunk>
									<Chunk type="NoRef">( &quot;SyntaxColoring.LineNumbers.SetColor&quot;; </Chunk>
									<Chunk type="VariableReference">$LineNumberColor</Chunk>
									<Chunk type="NoRef"> )</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$void"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
